@@ -88,6 +88,7 @@
           />
   </locations>
   <mirrors>
+    <mirror location="http://download.gnome.org/" alternate="file:///ftp/pub/GNOME/" host="window.gnome.org" />
     <mirror location="http://download.gnome.org/" alternate="sftp://master.gnome.org/ftp/pub/GNOME/" />
   </mirrors>
   <rename>
